@startuml

class InventoryTracker {
    main()
    start()
}

class InventoryTrackerController {
    ObservableList<Item> list

    refresh()
    tableViewSelectedItem()
    addItem()
    removeItem()
    editItem()
    exportHTML()
    importHTML()
    exportJSON()
    importJSON()
    exportTSV()
    importTSV()
}

class Item {
    String serialNumber
    String name
    double value
}

javafx.Application <|-- InventoryTracker

InventoryTracker - InventoryTrackerController
InventoryTrackerController *--> Item



@enduml